--- a/app/assets/stylesheets/reus/_hero.scss
+++ b/app/assets/stylesheets/reus/_hero.scss
@@ -1,9 +1,15 @@
+@import "helpers/**/*";
+
 main {
   margin-top: -137px;
-  
+
   section.hero {
     .hero__container {
       padding: 12rem 0;
+
+      a.button {
+        background-color: $yellow;
+      }
     }
   }
 }
