--- a/app/assets/stylesheets/reus/_hero.scss
+++ b/app/assets/stylesheets/reus/_hero.scss
@@ -15,4 +15,10 @@ main {
       }
     }
   }
+
+  .section-heading::before {
+    width: 1em;
+    height: 1em;
+    background-color: $yellow;
+  }
 }
