--- a/app/views/layouts/decidim/_wrapper.html.erb
+++ b/app/views/layouts/decidim/_wrapper.html.erb
@@ -60,7 +60,7 @@
           </div>
         </div>
 
-        <div class="show-for-medium <%= (request.path != '/') ? 'show-for-medium--not-home' : '' %>" data-set="nav-holder">
+        <div class="show-for-medium reus<%= (request.path != '/') ? ' reus--not-home' : '' %>" data-set="nav-holder">
           <div class="row column reus-bar">
             <a href="/">
               <%= image_tag("reus-participa.png", alt: "Reus participa" ) %>
