--- a/app/assets/stylesheets/decidim.scss
+++ b/app/assets/stylesheets/decidim.scss
@@ -1,6 +1,7 @@
 // // Variables
 //
 // $primary: #ef604d;
+$primary: #FEEE00;
 // $secondary: #599aa6;
 // $success: #57d685;
 // $warning: #ffae00;
