--- a/app/assets/stylesheets/reus/_topbar.scss
+++ b/app/assets/stylesheets/reus/_topbar.scss
@@ -9,6 +9,10 @@
   z-index: 1;
   position: relative;
 
+  @include mobile {
+    display: block !important;
+  }
+
   &.reus--not-home {
     background-color: $black;
 
@@ -36,10 +40,20 @@
     z-index: 2;
   }
 
+  @include mobile {
+    img {
+      padding-top: 1em;
+    }
+  }
+
   .reus-bar {
     height: 137px;
     display: flex;
     align-items: center;
+
+    @include mobile {
+      align-items: flex-start;
+    }
 
     .navbar-container {
       flex: 2;
@@ -57,6 +71,10 @@
         ul {
           display: flex;
           list-style-type: none;
+
+          @include mobile {
+            flex-direction: column;
+          }
 
           li {
             text-align: right;
