Change contrast colors

--- a/app/assets/stylesheets/reus/_hero.scss
+++ b/app/assets/stylesheets/reus/_hero.scss
@@ -12,6 +12,8 @@ main {
 
       a.button {
         background-color: $yellow;
+        color: $yellow2;
+        // color: $primary; // Decidim default variables (decidim.scss)
       }
     }
   }
