Add missing translations and hacky patch for navbar

--- a/app/assets/stylesheets/reus/_topbar.scss
+++ b/app/assets/stylesheets/reus/_topbar.scss
@@ -78,13 +78,13 @@
             text-align: right;
             text-transform: uppercase;
 
+            &.active a {
+              color: $yellow;
+            }
+
             a {
               padding-left: 2rem;
               @include font($color: $white);
-
-              &.active {
-                color: $yellow;
-              }
             }
           }
         }
