--- a/app/views/layouts/decidim/_wrapper.html.erb
+++ b/app/views/layouts/decidim/_wrapper.html.erb
@@ -177,17 +177,17 @@
           <div class="row column">
             <div class="medium-6 small-12 columns">
               <p>
-                <a class="pr-2" href="http://www.reus.cat" target="_blank" title="anar a Reus.cat">Reus.cat</a>.
-                <a class="pr-2" href="http://www.reus.cat/info_cookies" target="_blank" title="consulta la política de cookies"><%= t('.cookies_policy') %></a>.
+                <a class="pr-2" href="http://www.reus.cat" target="_blank" title="<%= t('.reus_link_title') %>">Reus.cat</a>.
+                <a class="pr-2" href="http://www.reus.cat/info_cookies" target="_blank" title="Consulta la política de cookies"><%= t('.cookies_policy') %></a>.
                 <!-- <a class="pr-2" href="">Avís legal</a>.  -->
                 <a class="pr-2" href="http://www.reus.cat/contacta" target="_blank" title="contacta amb l'Ajuntament de Reus"><%= t('.contact') %></a>.
-                <a class="pr-2" href="http://www.reus.cat/accessibilitat" target="_blank" title="consulta la política d'accessibilitat"><%= t('.accessibility') %></a></p>
+                <a class="pr-2" href="http://www.reus.cat/accessibilitat" target="_blank" title="<%= t('.accessibility_link_title') %>"><%= t('.accessibility') %></a></p>
               <hr>
               <small><%= t('.city_council_address') %><br>
               977 010 010 · <a href="mailto:ajuntament@reus.cat" title="envia un correu electrònic a l'Ajuntament de Reus">ajuntament@reus.cat</a></small>
             </div>
             <div class="medium-6 small-12 columns">
-              <a href="http://www.reus.cat" target="_blank" title="anar a Reus.cat">
+              <a href="http://www.reus.cat" target="_blank" title="<%= t('.reus_link_title') %>">
                 <%= image_tag("logo-reus-footer.png", alt: "Ajuntament de Reus" ) %>
               </a>
             </div>
