--- a/app/views/layouts/decidim/_wrapper.html.erb
+++ b/app/views/layouts/decidim/_wrapper.html.erb
@@ -20,8 +20,11 @@
         <!-- Topbar -->
         <div class="title-bar">
           <div class="row column topbar">
-            <div class="logo-wrapper">
-              <%= render partial: "layouts/decidim/logo", locals: { organization: current_organization } %>
+
+            <div class='logo-wrapper'>
+              <a href='http://www.reus.cat'>
+                <%= image_tag('logo-reus-negatiu.png', alt: 'Ayuntamiento de Reus') %>
+              </a>
             </div>
             <%= render partial: "layouts/decidim/language_chooser" %>
             <div class="hide-for-medium topbar__menu">
@@ -62,9 +65,15 @@
 
         <div class="show-for-medium reus<%= (request.path != '/') ? ' reus--not-home' : '' %>" data-set="nav-holder">
           <div class="row column reus-bar">
-            <a href="/">
-              <%= image_tag("reus-participa.png", alt: "Reus participa" ) %>
-            </a>
+
+            <% if current_organization %>
+              <%= link_to decidim.root_url(host: current_organization.host) do %>
+                <% if current_organization.logo.present? %>
+                  <%= image_tag current_organization.logo.url %>
+                <% end %>
+              <% end %>
+            <% end %>
+
             <div class="navbar-container">
               <div class="social-networks">
                 <% if current_organization.twitter_handler.present? %>
