Update footer texts

--- a/app/views/layouts/decidim/_wrapper.html.erb
+++ b/app/views/layouts/decidim/_wrapper.html.erb
@@ -148,8 +148,9 @@
           <div class="row column mt-3">
             <div class="medium-6 columns">
               <small>
+                <strong><%= t('.what') %></strong><br>
                 <strong><%= t('.participation_address') %></strong><br>
-                Tel. 977 010 010<br>
+                Tel. 977 010 029<br>
                 <a href="mailto:info.participa@reus.cat">info.participa@reus.cat</a><br>
                 <a href="http://participa.reus.cat/" target="_blank">participa.reus.cat</a>
               </small>
