Remove document number placeholder

--- a/app/views/census_authorization/_form.html.erb
+++ b/app/views/census_authorization/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="field">
-  <%= form.text_field :document_number, placeholder: '12345678' %>
+  <%= form.text_field :document_number %>
 </div>
 
 <div class="field date">
