--- a/app/views/layouts/decidim/_wrapper.html.erb
+++ b/app/views/layouts/decidim/_wrapper.html.erb
@@ -151,7 +151,7 @@
                 <strong><%= t('.what') %></strong><br>
                 <strong><%= t('.participation_address') %></strong><br>
                 Tel. 977 010 029<br>
-                <a href="mailto:info.participa@reus.cat">info.participa@reus.cat</a><br>
+                <a href="mailto:info.participacio@reus.cat">info.participacio@reus.cat</a><br>
                 <a href="http://participa.reus.cat/" target="_blank">participa.reus.cat</a>
               </small>
             </div>
