Restore header searchbox

--- a/app/views/layouts/decidim/_wrapper.html.erb
+++ b/app/views/layouts/decidim/_wrapper.html.erb
@@ -26,6 +26,7 @@
                 <%= image_tag('logo-reus-negatiu.png', alt: 'Ayuntamiento de Reus') %>
               </a>
             </div>
+            <%= render partial: "layouts/decidim/topbar_search" %>
             <%= render partial: "layouts/decidim/language_chooser" %>
             <div class="hide-for-medium topbar__menu">
               <button type="button" data-toggle="offCanvas">
