--- a/app/views/layouts/decidim/_wrapper.html.erb
+++ b/app/views/layouts/decidim/_wrapper.html.erb
@@ -1,3 +1,15 @@
+<%
+if respond_to?(:current_component) && current_component
+  edit_link(
+    manage_component_path(current_component),
+    :read,
+    :component,
+    component: current_component,
+    current_participatory_space: current_participatory_space
+  )
+end
+%>
+
 <div class="off-canvas-wrapper">
   <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
     <div class="off-canvas position-right hide-for-large" data-position="right"
@@ -20,23 +32,25 @@
         <!-- Topbar -->
         <div class="title-bar">
           <div class="row column topbar">
-
-            <div class='logo-wrapper'>
-              <a href='http://www.reus.cat'>
-                <%= image_tag('logo-reus-negatiu.png', alt: 'Ayuntamiento de Reus') %>
+            <div class="logo-wrapper">
+              <a href="http://www.reus.cat">
+                <%= image_tag("logo-reus-negatiu.png", alt: "Ayuntamiento de Reus") %>
               </a>
             </div>
             <%= render partial: "layouts/decidim/topbar_search" %>
             <%= render partial: "layouts/decidim/language_chooser" %>
             <div class="hide-for-medium topbar__menu">
               <button type="button" data-toggle="offCanvas">
-                <%= icon "menu", aria_label: t('layouts.decidim.header.navigation'), role: "img" %>
+                <%= icon "menu", aria_label: t("layouts.decidim.header.navigation"), role: "img" %>
               </button>
             </div>
             <% if current_user %>
               <div class="topbar__dropmenu topbar__user__logged">
-                <%= link_to decidim.profile_notifications_path(current_user.nickname), class: "topbar__notifications #{current_user.notifications.any? ? "is-active" : ""}" do %>
+                <%= link_to decidim.notifications_path, class: "topbar__notifications #{current_user.notifications.any? ? "is-active" : ""}" do %>
                   <%= icon "bell" %>
+                <% end %>
+                <%= link_to decidim.conversations_path, class: "topbar__conversations #{current_user.unread_conversations.any? ? "is-active" : ""}" do %>
+                  <%= icon "envelope-closed" %>
                 <% end %>
                 <ul class="dropdown menu" data-dropdown-menu>
                   <li class="is-dropdown-submenu-parent show-for-medium">
@@ -56,8 +70,8 @@
             <% else %>
               <div class="topbar__user show-for-medium" data-set="nav-login-holder">
                 <div class="topbar__user__login js-append">
-                  <%= link_to t('layouts.decidim.header.sign_up'), decidim.new_user_registration_path, class: "sign-up-link" %>
-                  <%= link_to t('layouts.decidim.header.sign_in'), decidim.new_user_session_path, class: "sign-in-link" %>
+                  <%= link_to t("layouts.decidim.header.sign_up"), decidim.new_user_registration_path, class: "sign-up-link" %>
+                  <%= link_to t("layouts.decidim.header.sign_in"), decidim.new_user_session_path, class: "sign-in-link" %>
                 </div>
               </div>
             <% end %>
@@ -129,13 +143,13 @@
           <div class="medium-8 large-6 large-offset-3 column main__footer__nav">
             <% if current_organization.static_pages.any? %>
               <ul class="footer-nav">
-                <% current_organization.static_pages.each do |page| %>
+                <% current_organization.static_pages.sorted_by_i18n_title.each do |page| %>
                   <li><%= link_to translated_attribute(page.title), decidim.page_path(page) %></li>
                 <% end %>
               </ul>
             <% end %>
           </div>
-          <%= render partial: 'layouts/decidim/social_media_links' %>
+          <%= render partial: "layouts/decidim/social_media_links" %>
         </div>
       </div> -->
       <footer>
