--- a/app/views/census_authorization/_form.html.erb
+++ b/app/views/census_authorization/_form.html.erb
@@ -30,6 +30,8 @@
 
 <%= form.hidden_field :handler_name %>
 
-<div class="actions">
-  <%= form.submit t("authorize", scope: "decidim.verifications.new"), class: "button expanded" %>
-</div>
+<% unless @form.try(:disable_submit?) %>
+  <div class="actions">
+    <%= form.submit t("authorize", scope: "decidim.verifications.new"), class: "button expanded" %>
+  </div>
+<% end %>
